--- a/public/Signin.html
+++ b/public/Signin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="Signin.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="container">
@@ -38,15 +39,16 @@
             </div>
         <div id="login-container">
             <h1 class="header">Welcome back!</h1>
-            <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+            <p id="login-error" style="color: red; display: none;" class="header"></p>
+            <div class="form-floating mb-3 mt-3">
+                <input type="email" class="form-control" id="login-email" placeholder="name@example.com">
+                <label for="login-email">Email address</label>
               </div>
               <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" class="form-control" id="login-password" placeholder="Password">
+                <label for="login-password">Password</label>
               </div>
-              <button type="button" class="btn btn-success btn-lg mt-4" id="login">LogIn</button>
+              <button onclick="onClickLogin()" type="button" class="btn btn-success btn-lg mt-4" id="login">LogIn</button>
         </div>
     </div>
 
