error in fetching

--- a/public/add_rest.html
+++ b/public/add_rest.html
@@ -24,7 +24,7 @@
                     Home
                 </a>
                 <a href="#" class="me-4" id="place-orders">
-                    PlaceOrders
+                    Menu
                 </a>
                 <a href="#" class="me-4" id="your-orders">
                     Your Orders
