--- a/public/Signin.html
+++ b/public/Signin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="Signin.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -23,7 +23,7 @@
                     Home
                 </a>
                 <a href="#" class="me-4" id="place-orders">
-                    PlaceOrders
+                    Menu
                 </a>
                 <a href="#" class="me-4" id="your-orders">
                     Your Orders
