--- a/public/Signup.html
+++ b/public/Signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="Signup.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -22,7 +23,7 @@
                     Home
                 </a>
                 <a href="#" class="me-4" id="place-orders">
-                    PlaceOrders
+                    Menu
                 </a>
                 <a href="#" class="me-4" id="your-orders">
                     Your Orders
@@ -37,28 +38,30 @@
                 </div>
             </div>
         <div id="login-container">
+          <p id="signup-error" style="color: red; display: none;" class="header"></p>
             <h1 class="header">Signup for free</h1>
             <div class="row g-3 mb-3">
                 <div class="col">
-                  <input type="text" class="form-control p-3" placeholder="First name" aria-label="First name">
+                  <input type="text" class="form-control p-3" id="firstname" placeholder="First name" aria-label="First name">
                 </div>
                 <div class="col">
-                  <input type="text" class="form-control p-3" placeholder="Last name" aria-label="Last name">
+                  <input type="text" class="form-control p-3" id="lastname" placeholder="Last name" aria-label="Last name">
                 </div>
               </div>
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control" id="signup-email" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control" id="password" placeholder="Password">
                 <label for="floatingPassword">Password</label>
               </div>
               <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
+                <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password">
                 <label for="floatingPassword">Confirm Password</label>
               </div>
-              <button type="button" class="btn btn-success btn-lg mt-4" id="Register">Get Started</button>
+              <p id="password-error" style="color: red; display: none;" class="header"></p>
+              <button type="button" class="btn btn-success btn-lg mt-4" id="Register" onclick="onclicksignup()">Get Started</button>
         </div>
     </div>
 
