--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="index.js" defer></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body onload="homeOnLoad()">
     <div id="container">
@@ -27,7 +27,7 @@
                         Home
                     </a>
                     <a href="#" class="me-4" id="place-orders">
-                        PlaceOrders
+                        Menu
                     </a>
                     <a href="#" class="me-4" id="your-orders">
                         Your Orders
@@ -51,7 +51,7 @@
   
     <!-- cards  -->
     <div class="cards" id="cards">
-        <!-- <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 18rem;">
             <img src="https://res.cloudinary.com/dik0ai1v8/image/upload/v1684317267/Default-velocity-cuisine-images/first-slide-1_efiueq.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">24*7 Delivery</h5>
@@ -78,7 +78,7 @@
                 <h5 class="card-title">Live Order Tracking</h5>
                 <p class="card-text">Know where your order is at all times, from the restaurant to your doorstep</p>
             </div>
-        </div> -->
+        </div>
     </div>
 
     <!-- footer  -->
