--- a/public/Signup.html
+++ b/public/Signup.html
@@ -26,7 +26,7 @@
                     Menu
                 </a>
                 <a href="#" class="me-4" id="your-orders">
-                    Your Orders
+                    My Orders
                 </a>
                 <a href="#" class="me-4" id="about-us">
                     About Us
