--- a/public/add_rest.html
+++ b/public/add_rest.html
@@ -27,7 +27,7 @@
                     Menu
                 </a>
                 <a href="#" class="me-4" id="your-orders">
-                    Your Orders
+                    My Orders
                 </a>
                 <a href="#" class="me-4" id="about-us">
                     About Us
