--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
                     <a href="#" class="me-4" id="home">
                         Home
                     </a>
-                    <a href="#" class="me-4" id="place-orders">
+                    <a href="./menu.html" class="me-4" id="place-orders">
                         Menu
                     </a>
                     <a href="#" class="me-4" id="your-orders">
-                        Your Orders
+                        My Orders
                     </a>
                     <a href="#" class="me-4" id="about-us">
                         About Us
