made myorders html and css

--- a/public/menu.html
+++ b/public/menu.html
@@ -54,7 +54,7 @@
                     <div class="card-body">
                         <h5 class="card-title">24*7 Delivery</h5>
                         <p class="card-text">We Delivers convenient and reliable food services that operates around the clock.</p>
-                        <a href="#" class="btn btn-success" id="buy">Buy</a>
+                        <a href="./myorder.html" class="btn btn-success" id="buy">Buy</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
