comment all the index apis

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                     <a href="./menu.html" class="me-4" id="place-orders">
                         Menu
                     </a>
-                    <a href="#" class="me-4" id="your-orders">
+                    <a href="./myorder.html" class="me-4" id="your-orders">
                         My Orders
                     </a>
                     <a href="#" class="me-4" id="about-us">
@@ -37,8 +37,8 @@
                     </a>
                 </div>
                 <div>
-                    <button type="button" class="btn btn-outline-success" id="sign-up"><a href="./Signup.html" class="sign-up">Sign-up</a></button>
-                    <button type="button" class="btn btn-outline-success" id="sign-in"><a href="./Signin.html" class="sign-in">Sign-in</a> </button>
+                    <button type="button" class="btn btn-outline-success" id="sign-up"><a href="./signup.html" class="sign-up">Sign-up</a></button>
+                    <button type="button" class="btn btn-outline-success" id="sign-in"><a href="./signin.html" class="sign-in">Sign-in</a> </button>
                 </div>
             </div>
         </nav>
