--- a/public/add_rest.html
+++ b/public/add_rest.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="add_rest.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="container">
@@ -42,25 +43,27 @@
 
         <!-- add restaurants  -->
         <div class="restaurant-form">
-        <form method="post" action="/add-restaurant" enctype="multipart/form-data">
+        <!-- <form method="post" action="/add-restaurant" enctype="multipart/form-data"> -->
+            <form>
             <div class="form-floating mb-3">
-                <input type="add-product" name="add-product" class="form-control" id="floatingInput" placeholder="Add product name">
+                <input type="add-product" name="productName" class="form-control addProduct" id="floatingInput" placeholder="Add product name">
                 <label for="floatingInput">Add Product Name</label>
               </div>
             <div class="form-floating mb-3">
-                <input type="product-desc" name="product-desc" class="form-control" id="floatingInput" placeholder="Enter Product Description">
+                <input type="product-desc" name="productDescription" class="form-control addProduct" id="floatingInput" placeholder="Enter Product Description">
                 <label for="floatingInput">Enter Product Description</label>
               </div>
+              <div class="form-floating mb-3">
+                <input type="product-image" name="productImage" placeholder="Comma seperated url"  class="form-control addProduct"/>
+                <label for="floatingInput">Comma seperated image url</label>
+              </div>
             <div class="form-floating mb-3">
-                <input type="product-price" name="product-price" class="form-control" id="floatingInput" placeholder="Enter Product Price">
+                <input type="product-price" name="productPrice" class="form-control addProduct" id="floatingInput" placeholder="Enter Product Price">
                 <label for="floatingInput">Enter Product Price</label>
-                <button type="button" class="btn btn-primary mt-3"> <input type="file" name="productImage" multiple /></button>
-                <button type="button" class="btn btn-success mt-3 p-2 ms-3">Submit</button>
+                <button type="button" class="btn btn-success mt-3 p-2 ms-3" onclick="addProduct()">Submit</button>
               </div>
         </form>
-    </div>
-
-    
+    </div>    
          <!-- footer  -->
     <div id="footer">
         <div class="footer-image">
