updated few font color in css and deleted jwt stuffs and remove unnecessary comments

--- a/public/add_rest.html
+++ b/public/add_rest.html
@@ -24,10 +24,10 @@
                 <a href="./index.html" class="me-4" id="home">
                     Home
                 </a>
-                <a href="#" class="me-4" id="place-orders">
+                <a href="./menu.html" class="me-4" id="place-orders">
                     Menu
                 </a>
-                <a href="#" class="me-4" id="your-orders">
+                <a href="./myorder.html" class="me-4" id="your-orders">
                     My Orders
                 </a>
                 <a href="#" class="me-4" id="about-us">
