--- a/public/myorder.html
+++ b/public/myorder.html
@@ -64,8 +64,8 @@
                 <h2>Price</h2>
             </div>
 
-            <!-- list details  -->
-            <!-- <div class="list_details">
+            list details 
+             <div class="list_details">
                 <h2> Chicken biryani</h2>
                 <h2>2</h2>
                 <h2>300</h2>
